modified schedule events in yml files

--- a/config/step-functions/global-customers-state-machine.yml
+++ b/config/step-functions/global-customers-state-machine.yml
@@ -22,3 +22,10 @@ stateMachine:
             Next: SuccessState
       SuccessState:
         Type: Succeed
+  events:  
+    - schedule:
+        name: omni-crm-global-customers-state-machine-${self:provider.stage}
+        description: 'schedule cloud watch event at 1AM and 1PM every day for global customers state machine'
+        rate: cron(0 1,13 * * ? *)
+        input:
+          key1: ""
