--- a/config/functions/global-customers.yml
+++ b/config/functions/global-customers.yml
@@ -21,4 +21,5 @@ function:
     timestamp_parameter: /${self:service}/${self:provider.stage}/globalCustomers/timestamp
     s3_bucket: ${ssm:/${self:service}/${self:provider.stage}/bucket}
     s3_key: ${ssm:/${self:service}/${self:provider.stage}/globalCustomers/s3/key}
+    sns_arn: ${ssm:/${self:service}/${self:provider.stage}/global-customers/sns/arn}
 
