--- a/serverless.yml
+++ b/serverless.yml
@@ -21,8 +21,11 @@ custom:
   serverless-layers:
     functions:
       - customers
+      - customers-new
       - sales-summary
-      - global-customers    
+      - sales-summary-new
+      - global-customers
+      - global-customers-new    
     dependenciesPath: ./requirements.txt
     
 plugins:
@@ -38,11 +41,17 @@ package:
 
 functions:
   customers: ${file(config/functions/customers.yml):function}
+  customers-new: ${file(config/functions/customers-new.yml):function}
   sales-summary: ${file(config/functions/sales-summary.yml):function}
+  sales-summary-new: ${file(config/functions/sales-summary-new.yml):function}
   global-customers: ${file(config/functions/global-customers.yml):function}
+  global-customers-new: ${file(config/functions/global-customers-new.yml):function}
 
 stepFunctions:
   stateMachines:
     sales-summary-state-machine: ${file(config/step-functions/sales-summary-state-machine.yml):stateMachine}
+    sales-summary-state-machine-new: ${file(config/step-functions/sales-summary-state-machine-new.yml):stateMachine}
     global-customers-state-machine: ${file(config/step-functions/global-customers-state-machine.yml):stateMachine}
+    global-customers-state-machine-new: ${file(config/step-functions/global-customers-state-machine-new.yml):stateMachine}
     customers-state-machine: ${file(config/step-functions/customers-state-machine.yml):stateMachine}
+    customers-state-machine-new: ${file(config/step-functions/customers-state-machine-new.yml):stateMachine}
