--- a/config/functions/customers-new.yml
+++ b/config/functions/customers-new.yml
@@ -19,5 +19,6 @@ function:
     REGION: ${self:provider.region}
     customer_table_url_new: ${ssm:/${self:service}/${self:provider.stage}/customers/url/new}
     timestamp_parameter_new: /${self:service}/${self:provider.stage}/customers/timestamp/new
-    s3_bucket: ${ssm:/${self:service}/${self:provider.stage}/bucket}
+    s3_bucket_new: ${ssm:/${self:service}/${self:provider.stage}/bucket/new}
     s3_key: ${ssm:/${self:service}/${self:provider.stage}/customers/s3/key}
+    sns_arn: ${ssm:/${self:service}/${self:provider.stage}/customers-new/sns/arn}
