added watermark and lambda tags

--- a/config/functions/customers-new.yml
+++ b/config/functions/customers-new.yml
@@ -5,6 +5,8 @@ function:
   description: omni crm dynamics Customers new - ${self:provider.stage}
   memorySize: 1024 
   timeout: 900
+  tags:
+    Name: customers-new 
   package:
     include:
     - src/customers_new.py
