--- a/config/functions/global-customers.yml
+++ b/config/functions/global-customers.yml
@@ -5,6 +5,8 @@ function:
   description: omni crm dynamics global customers - ${self:provider.stage}
   memorySize: 1024 
   timeout: 900
+  tags: 
+    Name : global-customers 
   package:
     include:
     - src/global-customers.py
